[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/droid-sans/DroidSans.tres" type="DynamicFont" id=2]
[ext_resource path="res://Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/droid-sans/DroidSans.ttf"

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 240.0
margin_right = -806.0
margin_bottom = -192.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3153.0
margin_top = -1456.0
margin_right = 4018.0
margin_bottom = 2060.0
color = Color( 0, 0, 0, 0.576471 )
__meta__ = {
"_edit_lock_": true
}

[node name="RenderScale" type="HSlider" parent="."]
margin_left = 10.0
margin_top = -91.0
margin_right = 214.0
margin_bottom = -75.0
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AA" type="HSlider" parent="."]
margin_left = 10.0
margin_top = -23.0
margin_right = 214.0
margin_bottom = -7.0
max_value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HRes" type="SpinBox" parent="."]
margin_left = 133.0
margin_top = -232.0
margin_right = 237.0
margin_bottom = -196.0
min_value = 320.0
max_value = 3840.0
value = 320.0

[node name="VRes" type="SpinBox" parent="."]
margin_left = 133.0
margin_top = -178.0
margin_right = 237.0
margin_bottom = -142.0
min_value = 240.0
max_value = 2160.0
value = 240.0

[node name="HRes2" type="SpinBox" parent="."]
margin_left = 400.0
margin_top = -232.0
margin_right = 504.0
margin_bottom = -196.0
min_value = 320.0
max_value = 3840.0
value = 320.0

[node name="VRes2" type="SpinBox" parent="."]
margin_left = 400.0
margin_top = -178.0
margin_right = 504.0
margin_bottom = -142.0
min_value = 240.0
max_value = 2160.0
value = 240.0

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = -228.0
margin_right = 141.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 1 )
text = "Resolution X:

Resolution Y:

Render Scale:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AALabel" type="Label" parent="."]
margin_left = 8.0
margin_top = -54.0
margin_right = 215.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 1 )
text = "Anti-Aliasing: OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 273.0
margin_top = -228.0
margin_right = 406.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 1 )
text = "Target Res X:

Target Res Y:

Rendered Res:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="renderscaleoutput" type="Label" parent="."]
margin_left = 158.0
margin_top = -120.0
margin_right = 208.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 1 )
text = "100%"

[node name="renderscaleoutput3" type="Label" parent="."]
margin_left = 422.0
margin_top = -120.0
margin_right = 520.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 1 )
text = "9999x9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scanlinedisclaimer" type="Label" parent="."]
margin_left = 11.0
margin_top = 98.0
margin_right = 209.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "(only recommended if rendered resolution 
is 240p and filtering is enabled)"
align = 1

[node name="Apply" type="Button" parent="."]
margin_left = 2.0
margin_top = 158.0
margin_right = 155.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 2 )
text = "Apply"

[node name="Close" type="Button" parent="."]
margin_left = 172.0
margin_top = 158.0
margin_right = 325.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 2 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="."]
margin_left = 617.0
margin_top = 167.0
margin_right = 824.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 2 )
text = "Restart Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filtering" type="CheckButton" parent="."]
margin_left = 13.0
margin_top = 3.0
margin_right = 210.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Filtering"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="useTargetRes" type="CheckButton" parent="."]
margin_left = 281.0
margin_top = -72.0
margin_right = 482.0
margin_bottom = -26.0
custom_fonts/font = SubResource( 4 )
text = "useTargetRes"

[node name="Scanlines" type="CheckButton" parent="."]
margin_left = 13.0
margin_top = 55.0
margin_right = 210.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
text = "Scanlines"

[node name="Mouselook" type="CheckButton" parent="."]
margin_left = 346.0
margin_top = 36.0
margin_right = 543.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "Mouselook"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
